Fixes search in sidebar & some minor layout issues.

--- a/src/main/resources/web/css/semantic-ui-overrides.css
+++ b/src/main/resources/web/css/semantic-ui-overrides.css
@@ -55,12 +55,17 @@ h3.header .value{
 .ui.vertical.stripe {
     padding: 8em 0em;
 }
+
 .ui.vertical.stripe h3 {
     font-size: 2em;
 }
 
 .ui.vertical.stripe .floated.image {
     clear: both;
+}
+
+.ui.segment .tile {
+    font-size: 1.25em;
 }
 
 article .text {
@@ -127,8 +132,18 @@ header.inverted .page-meta .label {
     padding-bottom: 6em;
 }
 
+.body .ui.spaced.segment.accordion-section {
+    padding-bottom: 3em;
+}
+
+.body .ui.accordion-section {
+    padding-top: 1em;
+    padding-bottom: 3em;
+    margin-bottom: 3em;
+}
+
 .ui.grid > .row > .column {
-    padding: 1em 2em 2.5em 2em;
+    padding: 1em 3em 2.5em 3em;
 }
 
 .ui.stackable.grid.basic.segment {
@@ -173,6 +188,18 @@ header.inverted .page-meta .label {
 .ui.vertical.segment.two-n-columns .row .column {
     padding-left: 3em;
     padding-right: 3em;
+}
+
+.ui.segment.tile p {
+    font-size: 1.25em
+}
+
+.ui.segment.tile {
+    font-size: 2em;
+}
+
+.body .ui.segment h2.ui.header {
+    font-size: 1.5em;
 }
 
 .ui.segment .tile.clickable {
@@ -267,6 +294,18 @@ article .text .blockquote {
 }
 
 @media only screen and (max-width: 700px) {
+    .ui.vertical.stripe.main-segment.posts.container {
+        margin-left: 0em !important;
+    }
+    .ui.vertical.stripe.main-segment.posts.container div.text {
+        margin-left: 1em;
+    }
+    .ui.sidebar .inverted.menu .header {
+        color: #fff;
+    }
+    .ui.sidebar .menu .menu .item {
+        padding-left: .75em;
+    }
     .ui.fixed.menu {
         display: none !important;
     }
